--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,9 +16,17 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+
+  position: relative;
+
+  background-color: #a38d00;
+  background-image: url("https://www.transparenttextures.com/patterns/brick-wall.png");;
+
+
 }
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
