--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,19 +15,29 @@ html {
  */
 
 body {
-  color: #545149;
+  background-color: rgb(207, 192, 171);
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
 
   position: relative;
 
-  background-color: #a38d00;
-  background-image: url("https://www.transparenttextures.com/patterns/brick-wall.png");;
+
 
 
 }
 
 
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  background-color:  rgb(207, 192, 171);
+  width: 90%;
+  margin: 0 auto;
+
+  text-align:center;
+  
+
+ }
