--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,11 +3,10 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
 
-  width: auto;
+  width: 100%;
   height: 120px;
+  position: fixed;
 
-  padding-bottom: 5px;
-  padding-top: 60px;
   padding-left: 1.5em;
   padding-right: 1.5em;
 
@@ -15,14 +14,14 @@ nav {
   flex-direction: row;
   justify-content: space-between;
 
-  top: 0px;
-  left: 0px;
   z-index: 2;
+
 }
 
 nav span { 
   font-family: "Bungee";
-  font-size: 36px;
+  font-size: 2em;
+  padding-top: 50px;
 }
 
 nav p {
@@ -34,9 +33,7 @@ nav p {
 nav p label {
   font-family: "Source Sans Pro";
   
-  
 }
-
 
 nav p i {
 
