--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,7 +15,7 @@ html {
  */
 
 body {
-  background-color: rgb(207, 192, 171);
+  background-color: rgb(233, 224, 211);
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
 
@@ -33,11 +33,111 @@ body {
  */
 
  main {
-  background-color:  rgb(207, 192, 171);
+  background-color:  rgb(233, 224, 211);
   width: 90%;
   margin: 0 auto;
 
   text-align:center;
   
+ }
 
+ .article {
+
+  display:flex;
+  flex-direction: column;
+
+  height: 275px;
+  background-color: rgb(233, 224, 211);
+  width:100%;
+  margin: 0 auto;
+  margin-top: 2em;
+
+  border-style: solid;
+
+  transition: box-shadow .3s;
+
+ }
+
+ .article:hover{
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
+ }
+
+ .img {
+  display:flex;
+  flex-direction: row;
+  gap: 20px;
+ }
+
+
+ .text-area {
+  width:95%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  
+  border-style:solid;
+  border-top: hidden;
+  border-left: hidden;
+  border-right: hidden;
+
+  margin-top: 40px;
+  margin-left: 30px;
+
+  font-family: "Source Sans Pro";
+  font-weight: bold;
+  
+ }
+
+.text-area p {
+  display:flex;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+ 
+
+ article footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 10px;
+
+  font-family: "Source Sans Pro";
+  font-size: 70%;
+  font-weight: bold;
+ }
+
+ article header {
+  display: flex;
+  justify-content: space-between;
+  
+
+  margin-bottom: 0px;
+  margin-top: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+
+ }
+
+ .address {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  font-style: italic;
+  color: rgb(95, 95, 95) ;
+ }
+
+
+
+ .options {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+ }
+
+ .hover:hover {
+  color: rgb(216, 166, 39);
  }
