--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -71,7 +71,7 @@ body {
  .text-area {
   width:95%;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: start;
   
   border-style:solid;
@@ -81,17 +81,20 @@ body {
 
   margin-top: 40px;
   margin-left: 30px;
+  min-height: 60px;
+  min-width: 0;
+  
 
   font-family: "Source Sans Pro";
   font-weight: bold;
+  font-size: 2vw;
+
+  text-align: justify;
+
+  word-break: break-all;
+  /* word-wrap: break-word; */
   
  }
-
-.text-area p {
-  display:flex;
-  margin-top: 10px;
-  margin-bottom: 40px;
-}
  
 
  #tweet-article footer {
@@ -128,8 +131,6 @@ body {
   font-style: italic;
   color: rgb(95, 95, 95) ;
  }
-
-
 
  .options {
   display: flex;
