--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,7 +6,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -15,14 +18,11 @@ html {
  */
 
 body {
+
   background-color: rgb(233, 224, 211);
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
-
   position: relative;
-
-
-
 
 }
 
@@ -32,72 +32,75 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- main {
-  background-color:  rgb(233, 224, 211);
+main {
+
+  background-color: rgb(233, 224, 211);
   width: 90%;
   margin: 0 auto;
+  text-align: center;
 
-  text-align:center;
-  
- }
+}
 
- #tweet-article {
+#tweet-article {
 
-  display:flex;
+  display: flex;
   flex-direction: column;
 
   height: 275px;
   background-color: rgb(233, 224, 211);
-  width:100%;
+  width: 100%;
   margin: 0 auto;
   margin-top: 2em;
 
   border-style: solid;
 
+}
 
- }
+#tweet-article:hover {
 
- #tweet-article:hover{
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
- }
 
- .img {
-  display:flex;
+}
+
+.img {
+  display: flex;
   flex-direction: row;
   gap: 20px;
- }
+  flex-shrink: 2;
+}
 
 
- .text-area {
-  width:95%;
+.text-area {
+  width: 95%;
   display: flex;
   align-items: start;
   justify-content: start;
-  
-  border-style:solid;
+
+  border-style: solid;
   border-top: hidden;
   border-left: hidden;
   border-right: hidden;
 
   margin-top: 40px;
-  margin-left: 30px;
+  margin-left: 15px;
   min-height: 60px;
-  min-width: 0;
-  
+  /* min-width: 0; */
+  padding-left: 10px;
+  padding-right: 10px;
 
   font-family: "Source Sans Pro";
   font-weight: bold;
-  font-size: 2vw;
+  font-size: .9em;
 
   text-align: justify;
 
-  word-break: break-all;
-  /* word-wrap: break-word; */
-  
- }
- 
+  word-wrap: normal;
+  /* word-break: break-all; */
 
- #tweet-article footer {
+}
+
+
+#tweet-article footer {
   display: flex;
   justify-content: space-between;
   align-items: start;
@@ -109,35 +112,39 @@ body {
   font-family: "Source Sans Pro";
   font-size: 70%;
   font-weight: bold;
- }
+}
 
- #tweet-article header {
+#tweet-article header {
+
   display: flex;
   justify-content: space-between;
-  
-
   margin-bottom: 0px;
   margin-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
 
- }
+}
 
- .address {
+.address {
+
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   font-style: italic;
-  color: rgb(95, 95, 95) ;
- }
+  color: rgb(95, 95, 95);
 
- .options {
+}
+
+.options {
+
   display: flex;
   justify-content: end;
   gap: 10px;
- }
 
- .hover:hover {
+}
+
+.hover:hover {
+
   color: rgb(216, 166, 39);
- }
+
+}
