--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -19,18 +19,24 @@ nav {
 }
 
 nav span { 
+
   font-family: "Bungee";
   font-size: 2em;
   padding-top: 50px;
+
 }
 
 nav p {
+
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
+
 }
 
 nav p label {
+
   font-family: "Source Sans Pro";
   
 }
@@ -38,9 +44,6 @@ nav p label {
 nav p i {
 
   color: red;
-  display: flex;
   text-align: center;
-
-
 
 }
