--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,39 +1,38 @@
-form {
+.new-tweet form {
 
+  padding: 1em;
   display: flex;
-  
   flex-direction: column;
   
 }
 
-label {
+.new-tweet form label {
+
   text-align: left;
-  
   font-family: "Source Sans Pro";
   font-weight: bold;
-
   padding-bottom: 5px;
+
 }
 
 form div {
+
  display: flex;
  flex-direction: row;
  justify-content: space-between;
+
 }
 
 form textarea {
-  background: transparent;
 
+  background: transparent;
   border-top-style: hidden;
   border-right-style: hidden;
   border-left-style: hidden;
   border-bottom-style: solid;
   border-width: .25em;
-
   border-color:black;
-
   line-height: 100%;
-
   font-family: "Source Sans Pro";
   font-size: 80%;
   font-weight: bold;
@@ -41,21 +40,22 @@ form textarea {
 }
 
 form div button {
-  display: flex;
-  
+
   margin-top: 10px;
-
   font-family: "Bungee";
-
   color: #FFFFFF;
   background-color: #4056A1;
+
+}
+
+form div button:hover {
+
+  box-shadow: 2px 2px 10px #4056A1; 
 }
 
 .counter {
-  display: flex;
 
   margin-top: 10px;
-
   font-family: "Bungee";
   
 }
@@ -66,3 +66,12 @@ form div button {
 
 }
 
+#error {
+
+  justify-content: center;
+  border-color: red;
+  border-style: solid;
+  background-color:rgb(245, 195, 195);
+  color: red;
+
+}
